--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -13,6 +13,7 @@ kotlin = "1.9.0"
 coreKtx = "1.13.1"
 lifecycleRuntimeKtx = "2.8.6"
 appcompat = "1.7.0"
+material = "1.12.0"
 constraintlayout = "2.1.4"
 
 junit = "4.13.2"
@@ -20,11 +21,15 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 
 sdk_kext = "0.0.2-SNAPSHOT"
+lib_imageloader = "0.0.1-SNAPSHOT"
+
+glide = "4.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -32,6 +37,10 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 
 sdk-kext = { group = "com.wangwh.sdk", name = "kext", version.ref = "sdk_kext" }
+libs-imageloader = { group = "com.wangwh.libs", name = "imageloader", version.ref = "lib_imageloader" }
+
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
