--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -5,9 +5,6 @@ targetSdk = "34"
 jvmTarget = "1.8"
 kotlinCompilerExtension = "1.5.1"
 
-androidLibrary = "8.6.0"
-mavenPublish = "0.30.0"
-
 agp = "8.6.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -53,6 +50,6 @@ eventbus = { group = "org.greenrobot", name = "eventbus", version.ref = "eventbu
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-android-library = { id = "com.android.library", version.ref = "androidLibrary" }
-maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+maven-publish = { id = "com.vanniktech.maven.publish", version = "0.30.0" }
 
